...
                    ForEach(models) { model in
                        Text(model.description)
                            .tag(model.id)
                    }
                }
                    .pickerStyle(.wheel)
                    .accessibilityIdentifier("modelPicker")
            },
            actionView: {
                OnboardingActionsView(
                    verbatim: actionText,
                    action: {
                        action()
...
