...

/// Sets up the OpenAI environment in order to execute Spezi `LLM`s.
/// 
/// The task needs to be stated within the `LLMRunner` initializer in the Spezi `Configuration`.
///
/// One is able to specify Spezi-wide configurations for the OpenAI interaction, such as the API key or a network timeout duration (however, not a requirement!).
/// However, these configurations can be overwritten via individual ``LLMOpenAI`` instances.
///
/// ### Usage
///
/// A minimal example of using the ``LLMOpenAIRunnerSetupTask`` can be found below.
///
/// ```swift
...
